# myscrollr

./: .env.example  .gitignore  AGENTS.md  README.md  v1_checklist.md
.github/workflows/: backend-tests.yml  deploy.yml  desktop-release.yml  frontend-tests.yml
api/: Dockerfile  go.mod  go.sum  main.go
api/core/: ai_triage.go  auth.go  billing.go  billing_test.go  channels.go  constants.go  curated_feeds_cache.go  email_template.go  events.go  events_control_test.go  handlers_account.go  handlers_business_leads.go  handlers_osticket_webhook.go  handlers_overview.go  handlers_overview_test.go  handlers_resend_webhook.go  handlers_support_approval.go  handlers_support_public.go  limiter_storage.go  limiter_storage_test.go  main_test.go  models.go  redis.go  sentry_helpers.go  server.go  stripe_webhook.go  stripe_webhook_decisions.go  stripe_webhook_integration_test.go  stripe_webhook_test.go  support.go  support_drafts.go  support_kb.go  tier_limits.go  tier_limits.json  tier_limits_sync_test.go  tier_limits_test.go  user_deletion.go  user_deletion_integration_test.go  user_deletion_test.go
api/migrations/: 000007_support_drafts.down.sql  000007_support_drafts.up.sql  000008_widen_direction_enum.down.sql  000008_widen_direction_enum.up.sql  000010_support_drafts_close.down.sql  000010_support_drafts_close.up.sql  000011_support_drafts_user_message.down.sql  000011_support_drafts_user_message.up.sql  000013_business_leads.down.sql  000013_business_leads.up.sql
channels/fantasy/api/: Dockerfile  go.mod  go.sum  main.go  sentry.go  yahoo_summary.go
channels/finance/api/: Dockerfile  go.mod  go.sum  main.go  sentry.go
channels/rss/api/: Dockerfile  go.mod  janitor.go  main.go  rss.go  sentry.go
channels/sports/api/: Dockerfile  go.mod  main.go  models.go  sentry.go  sports.go
channels/sports/service/: Cargo.toml
channels/sports/service/configs/: leagues.json
channels/sports/service/migrations/: 120000000008_rate_budget.down.sql  120000000008_rate_budget.up.sql
channels/sports/service/src/: database.rs  lib.rs  main.rs  types.rs
desktop/: app.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  app-main.tsx  cdc.ts  main.tsx  preferences.test.ts  preferences.ts  router.ts  sentry.ts  style.css  tierLimits.test.ts  tierLimits.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: ticker.json
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/commands/: appbar_win.rs  gpu_win.rs  system_info.rs  window.rs
desktop/src/api/: client.ts  queries.ts
desktop/src/components/: ConfirmDialog.tsx  ConnectionIndicator.tsx  ControlStrip.tsx  EmptyChannelState.tsx  FreshnessPill.tsx  OverflowMenu.tsx  RowSelector.tsx  ScrollrTicker.test.tsx  ScrollrTicker.tsx  Sidebar.tsx  SourcePageLayout.tsx  TickerLayoutSummary.tsx  TickerToolbar.tsx  TopBar.tsx
desktop/src/hooks/: useDashboardCDC.test.ts  useDashboardCDC.ts  useDeliveryHealth.test.ts  useDeliveryHealth.ts  useNavHistory.ts  useReliableHover.test.ts  useReliableHover.ts  useStartupUpdateCheck.ts  useTheme.ts  useTickerLayout.test.ts  useTickerLayout.ts  useUndoableAction.ts  useWidgetActions.ts  useWidgetConfig.ts  useWidgetTickerData.test.ts  useWidgetTickerData.ts
desktop/src/lib/: tips.test.ts  tips.ts  undoStack.test.ts  undoStack.ts  updaterDate.ts
desktop/src/routes/: __root.tsx  catalog.tsx  channel.$type.$tab.tsx  feed.tsx  settings.tsx  support.tsx  widget.$id.$tab.tsx
desktop/src/types/: index.ts
desktop/src/widgets/: WidgetConfigPanel.tsx  registry.ts
docs/: cdc-runbook.md
docs/adr/: 0001-sse-multi-replica.md  README.md
docs/superpowers/handoffs/: backlog.md  current.md
docs/superpowers/plans/: 2026-04-28-batch-a-quick-fixes.md  2026-04-28-batch-b-account-overview.md  2026-05-12-content-infrastructure.md  2026-05-12-marketing-seo-ssg-migration.md  2026-05-12-sentry-rollout.md  2026-05-12-settings-routing-layout-refactor.md  2026-05-13-clock-timer-widget-split.md  2026-05-13-operational-metrics-rollout.md
docs/superpowers/specs/: 2026-04-28-batch-b-account-overview-design.md  2026-04-28-batch-c-standardization-design.md  2026-04-29-ai-support-triage-design.md  2026-05-01-discord-triage-integration-design.md  2026-05-09-desktop-ia-refactor-design.md  2026-05-13-clock-timer-widget-split-design.md  2026-05-13-operational-metrics-design.md  2026-05-13-user-understanding-intent.md
k8s/: configmap-core.yaml  core-api.yaml  network-policies.yaml  secrets.yaml.template
myscrollr.com/: .gitignore  DEPLOY.md  Dockerfile  README.md  SCREENSHOTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
myscrollr.com/public/: llms-full.txt  llms.txt  manifest.json  robots.txt  sitemap.xml
myscrollr.com/scripts/: check-mobile-viewport.mjs  check-prerender.mjs  check-sentry-tunnel.mjs  fetch-latest-version.mjs  generate-og-images.mjs  generate-sitemap.mjs  optimize-screenshots.mjs
myscrollr.com/src/: client.tsx  main.tsx  routeTree.gen.ts  router.ts  sentry.ts
myscrollr.com/src/api/: client.ts
myscrollr.com/src/lib/: seo.ts  (+10 more)
osticket-plugins/scrollr-reply-api/: README.md  api.list.php  api.reply.php  class.ScrollrReplyPlugin.php  notify.message.php  plugin.php
scripts/: optimize-hero-screenshots.sh
scripts/bug-tools/: README.md  bug  bugs
(+112 files in other folders)
