[package]
name = "scrollr-desktop"
version = "1.0.8"
edition = "2021"
description = "Scrollr desktop app — pinned live ticker for sports, finance, RSS, and Yahoo Fantasy."
authors = ["Brandon Ruth <brandon@myscrollr.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/brandon-relentnet/myscrollr"
homepage = "https://myscrollr.com"
readme = "../../README.md"

[lib]
name = "scrollr_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Default features intentionally exclude the MCP bridge so that release
# builds never ship the dev automation plugin. Enable explicitly with
# `cargo build --features dev-mcp-bridge` (or `npm run tauri:dev --
# --features dev-mcp-bridge`) while doing end-to-end automation work.
default = []
dev-mcp-bridge = ["dep:tauri-plugin-mcp-bridge"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-mcp-bridge = { version = "0.9", optional = true }
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
log = "0.4"
sysinfo = "0.33"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Com"] }

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
