[package]
name = "sports_service"
version = "0.1.0"
edition = "2024"
description = "Scrollr sports channel ingestion service — polls api-sports.io for live scores, schedules, and standings."
authors = ["Brandon Ruth <brandon@myscrollr.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/brandon-relentnet/myscrollr"
homepage = "https://myscrollr.com"
publish = false

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
tokio-util = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["macros", "json"] }
dotenv = "0.15"
log = "0.4"
anyhow = "1.0"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "migrate"] }

# Sentry — error monitoring. send_default_pii=false by default; we add
# explicit scrubbing in before_send (see main.rs init_sentry).
sentry = { version = "0.42", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
    "anyhow",
    "release-health",
] }
sentry-anyhow = "0.42"
dirs = "5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }